# ddpi

./: .env  .gitignore  README.md  main.py  pyproject.toml
data/wheels/: pyo3_h3-0.1.0-cp310-cp310-manylinux_2_34_x86_64.whl
doc/: geo_information_enrichment.md
doc/port_events/: destination_changed_event.md  draught_changed_event.md  nav_status_changed_event.md  no_course_over_ground_event.md  no_drift_event.md  no_movement_event.md  no_rate_of_turn_event.md  no_speed_over_ground_event.md
src/data_preparation/: ais_simplification.py  tar_file_to_parquet.py
src/polars_plugin/pyo3-h3/: Cargo.toml
src/polars_plugin/pyo3-h3/src/: lib.rs
src/port_detection/: cluster_generation.py  event_extraction.py  event_validation.py  export.py
src/port_event_processing/: cluster_generation.py  event_extraction.py  event_validation.py  export.py
src/post_processing/: combine_ddpi_wpi.py  country_code.py  csv_to_geojson.py  ddpi_city_name.py  ddpi_h3_cell_export.py  geo_information_enrichment.py  overlap.py  port_stats.py
src/pre_processing/: ais_simplification.py  csv_to_parquet.py  extract_tar.py  parquet_type_cast.py  tar_file_to_parquet.py
src/tools/: osm_boundary_processing.py
src/visualization/: ais_heatmap.py  port_events.py
static/ascii/: ddpi_acsii_art.txt
