[project]
name = "ddpi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fast-geo-distance>=0.4.2",
    "geopandas>=1.0.1",
    "h3>=4.1.2",
    "h3ronpy>=0.21.1",
    "polars>=1.12.0",
    "prettytable>=3.12.0",
    "pyarrow>=18.0.0",
    "pyo3-h3>=0.1.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "shapely>=2.0.6",
    "tqdm>=4.66.6",
]
